examples/test/testpolicy13060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13060
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key19: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value20
          key28: value32
          key1: value24
      podSelector:
        matchLabels:
          key13: value16
          key15: value41
